--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cc.sferalabs.sfera.drivers</groupId>
-	<artifactId>iono</artifactId>
+	<artifactId>iono-eth</artifactId>
 	<version>1.0.0</version>
 
-	<name>iono</name>
-	<description>Driver for the integration of iono Ethernet via UDP</description>
+	<name>Iono Ethernet</name>
+	<description>Driver for the integration of Iono Ethernet via UDP</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,7 +33,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.3</version>
+				<version>2.10</version>
 			</extension>
 		</extensions>
 
